--- a/package.json
+++ b/package.json
@@ -3,8 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.5.3",
-    "react-dom": "^15.5.3"
+    "babel": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
+    "css": "^2.2.1",
+    "enzyme": "^2.8.0",
+    "jest": "^19.0.2",
+    "loader": "^2.1.1",
+    "react": "^15.4.2",
+    "react-addons-test-utils": "^15.5.1",
+    "react-dom": "^15.5.3",
+    "react-hot-loader": "^1.3.1",
+    "react-prop-types": "^0.4.0",
+    "react-redux": "^5.0.4",
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0",
+    "react-router-redux": "^5.0.0-alpha.4",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
