--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "react-router-redux": "^5.0.0-alpha.4",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-mock-store": "^1.2.3"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
